--- a/index.html
+++ b/index.html
@@ -8,3 +8,6 @@ Hello!
                         <li>财经新闻</li>
                         <li>Initium 端传媒</li>
                     </ul>
+
+<div class="" id="lga"><img style="padding-top:112px" height="92" src="/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" width="272" alt="Google" id="hplogo" title="Google" onload="google.aft&amp;&amp;google.aft(this)"><div id="logo-sub">香港</div></div>
+<form action="/search" id="f" method="get"><div id="hf"></div><div class="" id="fkbx" style="width: 664px;"><div id="fkbx-text">在 Google 搜尋或輸入網址</div><input id="q" aria-hidden="true" autocomplete="off" name="q" tabindex="-1" type="url" jsaction="mousedown:ntp.fkbxclk" style="opacity: 0;"><div id="fkbx_crt"></div><div id="fkbx-spch" tabindex="0" aria-label="語音搜尋" style="display: block;"></div><div id="fkbx-hspch" tabindex="0" aria-label="準備接聽「Ok Google」指令"></div><div id="fkbx-hht">請說「Ok Google」</div></div></form>
