--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@ Hello!
 
 <div class="" id="lga"><img style="padding-top:112px" height="92" src="/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" width="272" alt="Google" id="hplogo" title="Google" onload="google.aft&amp;&amp;google.aft(this)"><div id="logo-sub">香港</div></div>
 
-<div class="" id="lga"><img style="padding-top:112px" height="92" src="/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" width="272" alt="Google" id="hplogo" title="Google" onload="google.aft&amp;&amp;google.aft(this)"><div id="logo-sub">香港</div></div>
-
-<svg width="900" height="500" aria-label="A chart." style="overflow: hidden;"><defs id="defs"><filter id="_ABSTRACT_RENDERER_ID_0"><feGaussianBlur in="SourceAlpha" stdDeviation="2"></feGaussianBlur><feOffset dx="1" dy="1"></feOffset><feComponentTransfer><feFuncA type="linear" slope="0.1"></feFuncA></feComponentTransfer><feMerge><feMergeNode></feMergeNode><feMergeNode in="SourceGraphic"></feMergeNode></feMerge></filter></defs><rect x="0" y="0" width="900" height="500" stroke="none" stroke-width="0" fill="#ffffff"></rect><g><text text-anchor="start" x="161" y="70.9" font-family="Arial" font-size="14" font-weight="bold" stroke="none" stroke-width="0" fill="#000000">My Daily Activities</text><rect x="161" y="59" width="579" height="14" stroke="none" stroke-width="0" fill-opacity="0" fill="#ffffff"></rect></g><g><rect x="542" y="96" width="198" height="106" stroke="none" stroke-width="0" fill-opacity="0" fill="#ffffff"></rect><g column-id="Work"><rect x="542" y="96" width="198" height="14" stroke="none" stroke-width="0" fill-opacity="0" fill="#ffffff"></rect><g><text text-anchor="start" x="561" y="107.9" font-family="Arial" font-size="14" stroke="none" stroke-width="0" fill="#222222">Work</text></g><circle cx="549" cy="103" r="7" stroke="none" stroke-width="0" fill="#3366cc"></circle></g><g column-id="Eat"><rect x="542" y="119" width="198" height="14" stroke="none" stroke-width="0" fill-opacity="0" fill="#ffffff"></rect><g><text text-anchor="start" x="561" y="130.9" font-family="Arial" font-size="14" stroke="none" stroke-width="0" fill="#222222">Eat</text></g><circle cx="549" cy="126" r="7" stroke="none" stroke-width="0" fill="#dc3912"></circle></g><g column-id="Commute"><rect x="542" y="142" width="198" height="14" stroke="none" stroke-width="0" fill-opacity="0" fill="#ffffff"></rect><g><text text-anchor="start" x="561" y="153.9" font-family="Arial" font-size="14" stroke="none" stroke-width="0" fill="#222222">Commute</text></g><circle cx="549" cy="149" r="7" stroke="none" stroke-width="0" fill="#ff9900"></circle></g><g column-id="Watch TV"><rect x="542" y="165" width="198" height="14" stroke="none" stroke-width="0" fill-opacity="0" fill="#ffffff"></rect><g><text text-anchor="start" x="561" y="176.9" font-family="Arial" font-size="14" stroke="none" stroke-width="0" fill="#222222">Watch TV</text></g><circle cx="549" cy="172" r="7" stroke="none" stroke-width="0" fill="#109618"></circle></g><g column-id="Sleep"><rect x="542" y="188" width="198" height="14" stroke="none" stroke-width="0" fill-opacity="0" fill="#ffffff"></rect><g><text text-anchor="start" x="561" y="199.9" font-family="Arial" font-size="14" stroke="none" stroke-width="0" fill="#222222">Sleep</text></g><circle cx="549" cy="195" r="7" stroke="none" stroke-width="0" fill="#990099"></circle></g></g><g><path d="M340,251L340,97A154,154,0,0,1,379.8581329457882,399.75257724851656L340,251A0,0,0,0,0,340,251" stroke="#ffffff" stroke-width="1" fill="#3366cc"></path><text text-anchor="start" x="438.1707648577682" y="240.34252366466197" font-family="Arial" font-size="14" stroke="none" stroke-width="0" fill="#ffffff">45.8%</text></g><g><path d="M340,251L191.2474227514835,290.8581329457882A154,154,0,0,1,340,97L340,251A0,0,0,0,0,340,251" stroke="#ffffff" stroke-width="1" fill="#990099"></path><text text-anchor="start" x="225.02377088259124" y="183.02217618173913" font-family="Arial" font-size="14" stroke="none" stroke-width="0" fill="#ffffff">29.2%</text></g><g><path d="M340,251L231.1055556972717,359.89444430272835A154,154,0,0,1,191.2474227514835,290.8581329457882L340,251A0,0,0,0,0,340,251" stroke="#ffffff" stroke-width="1" fill="#109618"></path><text text-anchor="start" x="217.79914743775038" y="317.21509081498266" font-family="Arial" font-size="14" stroke="none" stroke-width="0" fill="#ffffff">8.3%</text></g><g><path d="M340,251L300.1418670542118,399.75257724851656A154,154,0,0,1,231.1055556972717,359.89444430272835L340,251A0,0,0,0,0,340,251" stroke="#ffffff" stroke-width="1" fill="#ff9900"></path><text text-anchor="start" x="261.2228787133989" y="364.63316362130666" font-family="Arial" font-size="14" stroke="none" stroke-width="0" fill="#ffffff">8.3%</text></g><g><path d="M340,251L379.8581329457882,399.75257724851656A154,154,0,0,1,300.1418670542118,399.75257724851656L340,251A0,0,0,0,0,340,251" stroke="#ffffff" stroke-width="1" fill="#dc3912"></path><text text-anchor="start" x="324" y="387.9827092057096" font-family="Arial" font-size="14" stroke="none" stroke-width="0" fill="#ffffff">8.3%</text></g><g></g></svg>
-
 <html>
   <head>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
@@ -48,3 +44,33 @@ Hello!
   </body>
 </html>
 
+<html>
+  <head>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+      google.charts.load("current", {packages:["corechart"]});
+      google.charts.setOnLoadCallback(drawChart);
+      function drawChart() {
+        var data = google.visualization.arrayToDataTable([
+          ['Task', 'Hours per Day'],
+          ['Work',     11],
+          ['Eat',      2],
+          ['Commute',  2],
+          ['Watch TV', 2],
+          ['Sleep',    7]
+        ]);
+
+        var options = {
+          title: 'My Daily Activities',
+          is3D: true,
+        };
+
+        var chart = new google.visualization.PieChart(document.getElementById('piechart_3d'));
+        chart.draw(data, options);
+      }
+    </script>
+  </head>
+  <body>
+    <div id="piechart_3d" style="width: 900px; height: 500px;"></div>
+  </body>
+</html>
