--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
-test
-Hello!
-
-
+<html>
+  <head>
+    <title>DMEP Materials</title>
+  </head>
+</html>
+<body>
+  This is body.
+  <h1>DMEP Class</h1>
+  <h2>Course Information
+    <ul>
+      <li>Time:July 31 - Aug 12</li>
+      <li>Venue:</li>
+      <li>Lecture:</li>
+    </ul>
+  </h2>
+  
+  <h2>Slides</h2>
+  <h2>Student List</h2>
+  <h2>Reference</h2>
+</body>
 <ul>
                         <li>DataWorks</li>
                         <li>FT 中文网</li>
