--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
 <body>
   This is body.
   <h1>DMEP Class</h1>
-  <h2>Course Information
-    <ul>
-      <li>Time:July 31 - Aug 12</li>
-      <li>Venue:</li>
-      <li>Lecture:</li>
-    </ul>
-  </h2>
-  
+  <h2>Course Information  </h2>
+  <ul>
+    <li>Time:July 31 - Aug 12</li>
+    <li>Venue:</li>
+    <li>Lecture:</li>
+  </ul>
   <h2>Slides</h2>
   <h2>Student List</h2>
   <h2>Reference</h2>
