--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <h2>Slides</h2>
   <a href="https://docs.google.com/presentation/d/1BE959TyjkuupOdOximVH26BGBUvZqKDWpJFd5xCbwI0/edit#slide=id.p">Day1
   </a>
-  <iframe src="https://docs.google.com/presentation/d/1ei3z7QgvMXbpvePCrrgoCP3S4M-tQDZrSWNFUA7cTys/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+  
+  <iframe src="https://docs.google.com/presentation/d/1ei3z7QgvMXbpvePCrrgoCP3S4M-tQDZrSWNFUA7cTys/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true">
+  </iframe>
   <h2>Student List</h2>
     External Link
   <h2>Reference</h2>
