--- a/wuyang.html
+++ b/wuyang.html
@@ -1,34 +1,90 @@
-<section style="width: 980px; position: absolute; top: 0px; height: 583px; left: 0px;" class="strc1" id="comp-irls0xdi" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.$centeredContent.$inlineContent.$SITE_PAGES.$c1dmp_DESKTOP.$inlineContent.$comp-irls0xdi"><div style="position: absolute; top: 0px; width: calc((100vw - 0px) - 0px); height: 100%; pointer-events: auto; bottom: 0px; left: calc(490px - (((100vw - 0px) - 0px) / 2)); right: calc(490px + (((100vw - 0px) - 0px) / 2)); overflow: hidden; clip: rect(0px 1440px 583px 0px);" data-enable-video="true" class="strc1balata" id="comp-irls0xdibalata" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.$centeredContent.$inlineContent.$SITE_PAGES.$c1dmp_DESKTOP.$inlineContent.$comp-irls0xdi.$playbackdesktop"><div style="position:absolute;width:100%;height:100%;" class="bgColor" id="comp-irls0xdibalatabgcolor" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.$centeredContent.$inlineContent.$SITE_PAGES.$c1dmp_DESKTOP.$inlineContent.$comp-irls0xdi.$playbackdesktop.0"><div style="width:100%;height:100%;position:absolute;background-color:transparent;" id="comp-irls0xdibalatabgcoloroverlay" class="bgColoroverlay" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.$centeredContent.$inlineContent.$SITE_PAGES.$c1dmp_DESKTOP.$inlineContent.$comp-irls0xdi.$playbackdesktop.0.$overlay"></div></div></div><div id="comp-irls0xdiinlineContent" class="strc1inlineContent" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.$centeredContent.$inlineContent.$SITE_PAGES.$c1dmp_DESKTOP.$inlineContent.$comp-irls0xdi.$inlineContent"><div style="position: absolute; left: calc((((((100vw - 0px) - 0px) * 0.5) + ((980px - ((100vw - 0px) - 0px)) / 2)) + 0px) + -490px); width: 980px; top: 0px; height: 583px;" class="strc1" id="mediairm34ucq7" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.$centeredContent.$inlineContent.$SITE_PAGES.$c1dmp_DESKTOP.$inlineContent.$comp-irls0xdi.$inlineContent.$mediairm34ucq7/=1$mediairm34ucq7"><div style="position: absolute; top: 0px; width: calc((((100vw - 0px) - 0px) * 1) + 1px); height: 100%; pointer-events: none; left: calc((((((100vw - 0px) - 0px) * 1) - 980px) * -0.5) - 1px); bottom: 0px; overflow: hidden; clip: rect(0px 1441px 583px 0px);" data-enable-video="true" class="strc1balata" id="mediairm34ucq7balata" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.$centeredContent.$inlineContent.$SITE_PAGES.$c1dmp_DESKTOP.$inlineContent.$comp-irls0xdi.$inlineContent.$mediairm34ucq7/=1$mediairm34ucq7.$playbackdesktop"><div style="position:fixed;width:100%;height:100%;top:0;" class="bgColor" id="mediairm34ucq7balatabgcolor" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.$centeredContent.$inlineContent.$SITE_PAGES.$c1dmp_DESKTOP.$inlineContent.$comp-irls0xdi.$inlineContent.$mediairm34ucq7/=1$mediairm34ucq7.$playbackdesktop.0"><div style="width:100%;height:100%;position:absolute;background-color:rgba(24, 33, 83, 1);" id="mediairm34ucq7balatabgcoloroverlay" class="bgColoroverlay" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.$centeredContent.$inlineContent.$SITE_PAGES.$c1dmp_DESKTOP.$inlineContent.$comp-irls0xdi.$inlineContent.$mediairm34ucq7/=1$mediairm34ucq7.$playbackdesktop.0.$overlay"></div></div><div style="position: fixed; pointer-events: none; top: 0px; transform-style: preserve-3d; width: 1441px; left: -1px; height: 583px;" data-effect="BackgroundParallax" data-fitting="fill" data-align="center" class="bgMedia" id="mediairm34ucq7balatamedia" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.$centeredContent.$inlineContent.$SITE_PAGES.$c1dmp_DESKTOP.$inlineContent.$comp-irls0xdi.$inlineContent.$mediairm34ucq7/=1$mediairm34ucq7.$playbackdesktop.1"><div id="mediairm34ucq7balatamediacontent" data-type="image" data-style="" class="bgImage" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.$centeredContent.$inlineContent.$SITE_PAGES.$c1dmp_DESKTOP.$inlineContent.$comp-irls0xdi.$inlineContent.$mediairm34ucq7/=1$mediairm34ucq7.$playbackdesktop.1.$img_BackgroundParallax" style="transform: translate3d(0px, 20.2px, 0px); position: relative; width: 1441px; height: 583px; opacity: 0.2;"><div class="bgImagepreloader" id="mediairm34ucq7balatamediacontentpreloader" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.$centeredContent.$inlineContent.$SITE_PAGES.$c1dmp_DESKTOP.$inlineContent.$comp-irls0xdi.$inlineContent.$mediairm34ucq7/=1$mediairm34ucq7.$playbackdesktop.1.$img_BackgroundParallax.$preloader"></div><img id="mediairm34ucq7balatamediacontentimage" alt="" data-type="image" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.$centeredContent.$inlineContent.$SITE_PAGES.$c1dmp_DESKTOP.$inlineContent.$comp-irls0xdi.$inlineContent.$mediairm34ucq7/=1$mediairm34ucq7.$playbackdesktop.1.$img_BackgroundParallax.$image" src="https://static.wixstatic.com/media/813b164e6ecd49b0b09f5f9913d34577.jpg/v1/fill/w_1441,h_583,al_c,q_85,usm_0.66_1.00_0.01/813b164e6ecd49b0b09f5f9913d34577.webp" style="width: 1441px; height: 583px; object-fit: cover;"></div></div></div><div style="position:absolute;width:980px;top:0;bottom:0;left:calc((100% - 980px) * 0.5);" id="mediairm34ucq7inlineContent" class="strc1inlineContent" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.$centeredContent.$inlineContent.$SITE_PAGES.$c1dmp_DESKTOP.$inlineContent.$comp-irls0xdi.$inlineContent.$mediairm34ucq7/=1$mediairm34ucq7.$inlineContent"><div style="left: 20px; position: absolute; visibility: inherit; top: 112px; width: 470px; height: 470px;" data-exact-height="470" data-content-padding-horizontal="0" data-content-padding-vertical="0" title="" class="wp2" id="comp-isuax1ud" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.$centeredContent.$inlineContent.$SITE_PAGES.$c1dmp_DESKTOP.$inlineContent.$comp-irls0xdi.$inlineContent.$mediairm34ucq7/=1$mediairm34ucq7.$inlineContent.$comp-isuax1ud"><div style="width: 470px; height: 470px;" id="comp-isuax1udlink" class="wp2link" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.$centeredContent.$inlineContent.$SITE_PAGES.$c1dmp_DESKTOP.$inlineContent.$comp-irls0xdi.$inlineContent.$mediairm34ucq7/=1$mediairm34ucq7.$inlineContent.$comp-isuax1ud.$link"><div id="comp-isuax1udimg" style="transform: translateZ(0px); position: relative; width: 470px; height: 470px;" data-style="" class="wp2img" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.$centeredContent.$inlineContent.$SITE_PAGES.$c1dmp_DESKTOP.$inlineContent.$comp-irls0xdi.$inlineContent.$mediairm34ucq7/=1$mediairm34ucq7.$inlineContent.$comp-isuax1ud.$link.0"><div class="wp2imgpreloader" id="comp-isuax1udimgpreloader" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.$centeredContent.$inlineContent.$SITE_PAGES.$c1dmp_DESKTOP.$inlineContent.$comp-irls0xdi.$inlineContent.$mediairm34ucq7/=1$mediairm34ucq7.$inlineContent.$comp-isuax1ud.$link.0.$preloader"></div><svg id="svgkennedy-comp-isuax1udimg" version="1.1" style="width:0;height:0;left:0;top:0;overflow:hidden;position:absolute;" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.$centeredContent.$inlineContent.$SITE_PAGES.$c1dmp_DESKTOP.$inlineContent.$comp-irls0xdi.$inlineContent.$mediairm34ucq7/=1$mediairm34ucq7.$inlineContent.$comp-isuax1ud.$link.0.$svgkennedy-comp-isuax1udimg"><defs data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.$centeredContent.$inlineContent.$SITE_PAGES.$c1dmp_DESKTOP.$inlineContent.$comp-irls0xdi.$inlineContent.$mediairm34ucq7/=1$mediairm34ucq7.$inlineContent.$comp-isuax1ud.$link.0.$svgkennedy-comp-isuax1udimg.$defskennedy-comp-isuax1udimg"><filter id="kennedy-comp-isuax1udimg" color-interpolation="sRGB" color-interpolation-filters="sRGB">             <feComponentTransfer result="srcRGB"></feComponentTransfer><feColorMatrix type="saturate" values="0"></feColorMatrix>
-<feComponentTransfer><feFuncR type="linear" slope="1.1" intercept="-0.05"></feFuncR><feFuncG type="linear" slope="1.1" intercept="-0.05"></feFuncG><feFuncB type="linear" slope="1.1" intercept="-0.05"></feFuncB></feComponentTransfer>
-<feComponentTransfer><feFuncR type="linear" slope="0.9"></feFuncR><feFuncG type="linear" slope="0.9"></feFuncG><feFuncB type="linear" slope="0.9"></feFuncB></feComponentTransfer><feComponentTransfer></feComponentTransfer></filter></defs></svg><img id="comp-isuax1udimgimage" style="filter: url(&quot;#kennedy-comp-isuax1udimg&quot;); outline: transparent solid 1px; width: 470px; height: 470px; object-fit: cover;" alt="" data-type="image" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.$centeredContent.$inlineContent.$SITE_PAGES.$c1dmp_DESKTOP.$inlineContent.$comp-irls0xdi.$inlineContent.$mediairm34ucq7/=1$mediairm34ucq7.$inlineContent.$comp-isuax1ud.$link.0.$imagekennedy-comp-isuax1udimg" src="https://static.wixstatic.com/media/23e8ad88ae744df0bd7f5221f3d67b0e.jpg/v1/crop/x_90,y_275,w_2349,h_2350/fill/w_470,h_470,al_c,q_80,usm_0.66_1.00_0.01/23e8ad88ae744df0bd7f5221f3d67b0e.webp"></div></div></div><div style="left: 490px; width: 470px; position: absolute; visibility: inherit; top: 112px; height: 470px;" class="c1" id="comp-isylwyqk" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.$centeredContent.$inlineContent.$SITE_PAGES.$c1dmp_DESKTOP.$inlineContent.$comp-irls0xdi.$inlineContent.$mediairm34ucq7/=1$mediairm34ucq7.$inlineContent.$comp-isylwyqk"><div id="comp-isylwyqkbg" class="c1bg" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.$centeredContent.$inlineContent.$SITE_PAGES.$c1dmp_DESKTOP.$inlineContent.$comp-irls0xdi.$inlineContent.$mediairm34ucq7/=1$mediairm34ucq7.$inlineContent.$comp-isylwyqk.$bg"></div><div id="comp-isylwyqkinlineContent" class="c1inlineContent" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.$centeredContent.$inlineContent.$SITE_PAGES.$c1dmp_DESKTOP.$inlineContent.$comp-irls0xdi.$inlineContent.$mediairm34ucq7/=1$mediairm34ucq7.$inlineContent.$comp-isylwyqk.$inlineContent"><div style="left: 83px; width: 304px; position: absolute; top: 83px;" class="txtNew" id="comp-isylxd3r" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.$centeredContent.$inlineContent.$SITE_PAGES.$c1dmp_DESKTOP.$inlineContent.$comp-irls0xdi.$inlineContent.$mediairm34ucq7/=1$mediairm34ucq7.$inlineContent.$comp-isylwyqk.$inlineContent.$comp-isylxd3r"><h4 class="font_4"><span class="color_19">Rachel Smith</span></h4>
+<div id="container" class="template_viewer" style="height: 100%;">
+    <div id="header">
+        <div class="navigation">
+            <div id="wixLogo">
+                <a href="http://www.wix.com/">Wix Press</a>
+            </div>
+                            <div id="template-mode-toggle">
+                    <div class="view-mode-toggle-button view-mode-toggle-button-desktop selected" data="desktop" title="Desktop view"></div>
+                    <div class="view-mode-toggle-button view-mode-toggle-button-mobile" data="mobile" title="Mobile view"></div>
+                </div>
+                        <div class="templateDetails" itemscope="" itemtype="http://schema.org/Product/WebsiteTemplate">
+                <meta itemprop="name" content="Professional CV">
+            </div>
+            <!-- End of .templateDetails-->
+            <div class="templatesButtons">
+                <span id="templatesName">Click Edit and create your own amazing website</span> <a id="readMore" href="#">Read more</a>
+                <meta itemprop="image" content="//static.wixstatic.com/media/643a2480bf1449d4a829cd2bb90dcd5f.jpg">
+                <a href="#" class="button" id="editButton">Edit this site<span>&nbsp;</span></a>
+                <span id="categoriesHolder">
 
-<h6 class="font_6" style="line-height:1.8em;"><span class="color_19"><span style="letter-spacing:0.05em;">LAWYER &amp; CONSULTANT</span></span></h6>
+                </span>
+                <span class="priceTypeWrapper"> Price: <span id="priceType">Free</span></span>
+                <span class="html5icon"></span>
 
-<p class="font_8">&nbsp;</p>
+                <div class="socialButtons">
+                    <div class="socialButtonsContent">
+                        <div class="facebookWrapper">
+                            <div class="fb-like fb_iframe_widget" data-send="false" data-layout="button_count" data-show-faces="true" fb-xfbml-state="rendered" fb-iframe-plugin-query="app_id=&amp;container_width=0&amp;href=http%3A%2F%2Fwww.wix.com%2Fwebsite-template%2Fview%2Fhtml%2F1893%3ForiginUrl%3Dhttp%253A%252F%252Fwww.wix.com%252Fwebsite%252Ftemplates%252Fhtml%252Fportfolio-cv%252F1%26bookName%3D%26galleryDocIndex%3D7%26category%3Dportfolio-cv&amp;layout=button_count&amp;locale=en_US&amp;sdk=joey&amp;send=false&amp;show_faces=true"><span style="vertical-align: bottom; width: 61px; height: 20px;"><iframe name="f18685fb2e1f19c" width="1000px" height="1000px" frameborder="0" allowtransparency="true" allowfullscreen="true" scrolling="no" title="fb:like Facebook Social Plugin" src="https://www.facebook.com/plugins/like.php?app_id=&amp;channel=http%3A%2F%2Fstaticxx.facebook.com%2Fconnect%2Fxd_arbiter%2Fr%2FXBwzv5Yrm_1.js%3Fversion%3D42%23cb%3Df10eba04b83a604%26domain%3Dwww.wix.com%26origin%3Dhttp%253A%252F%252Fwww.wix.com%252Ff2f29fe5ba4e104%26relation%3Dparent.parent&amp;container_width=0&amp;href=http%3A%2F%2Fwww.wix.com%2Fwebsite-template%2Fview%2Fhtml%2F1893%3ForiginUrl%3Dhttp%253A%252F%252Fwww.wix.com%252Fwebsite%252Ftemplates%252Fhtml%252Fportfolio-cv%252F1%26bookName%3D%26galleryDocIndex%3D7%26category%3Dportfolio-cv&amp;layout=button_count&amp;locale=en_US&amp;sdk=joey&amp;send=false&amp;show_faces=true" style="border: none; visibility: visible; width: 61px; height: 20px;" class=""></iframe></span></div>
+                        </div>
+                        <div class="googlePlusWrapper">
+                            <div id="___plusone_0" style="text-indent: 0px; margin: 0px; padding: 0px; background: transparent; border-style: none; float: none; line-height: normal; font-size: 1px; vertical-align: baseline; display: inline-block; width: 32px; height: 20px;"><iframe ng-non-bindable="" frameborder="0" hspace="0" marginheight="0" marginwidth="0" scrolling="no" style="position: static; top: 0px; width: 32px; margin: 0px; border-style: none; left: 0px; visibility: visible; height: 20px;" tabindex="0" vspace="0" width="100%" id="I0_1501484816355" name="I0_1501484816355" src="https://apis.google.com/u/0/se/0/_/+1/fastbutton?usegapi=1&amp;size=medium&amp;origin=http%3A%2F%2Fwww.wix.com&amp;url=http%3A%2F%2Fwww.wix.com%2Fwebsite-template%2Fview%2Fhtml%2F1893&amp;gsrc=3p&amp;ic=1&amp;jsh=m%3B%2F_%2Fscs%2Fapps-static%2F_%2Fjs%2Fk%3Doz.gapi.zh_CN.XtCFt0ZUYsg.O%2Fm%3D__features__%2Fam%3DAQ%2Frt%3Dj%2Fd%3D1%2Frs%3DAGLTcCMUMM65puO-r4t-Uf1aLc7xE0sUkg#_methods=onPlusOne%2C_ready%2C_close%2C_open%2C_resizeMe%2C_renderstart%2Concircled%2Cdrefresh%2Cerefresh&amp;id=I0_1501484816355&amp;parent=http%3A%2F%2Fwww.wix.com&amp;pfname=&amp;rpctoken=33781281" data-gapiattached="true" title="G+"></iframe></div>
+                        </div>
+                    </div>
+                    <!-- end of .socialButtonsContent -->
+                </div>
+                <!-- end of .socialButtons -->
+            </div>
+        </div>
+        <!-- End of .navigation-->
+    </div>
+    <!-- End of #Header-->
+    <div id="headerShadows">
+        <div class="rightShadow"></div>
+        <div class="leftShadow"></div>
+    </div>
+    <!-- End of #HeaderShadows-->
+    <div class="contentWrapper" style="height: calc(100% - 46px);">
+                                    <div class="preview-tab preview-tab-desktop" style="height: 479px;">
+                <iframe src="http://www.wix.com/demone2/professional-cv" width="100%" height="100%"></iframe>
+            </div>
+        
+        <!--</div>--><!-- End of .content-->
+    </div>
+    <!-- End of .contentWrapper-->
 
-<h6 class="font_6" style="line-height:1.3em;"><span class="color_19"><span style="letter-spacing:0.05em;">Phone:</span></span></h6>
+    <div id="dialog-overlay"></div>
+    <div id="dialog-box">
+        <a id="close-pop-up-button" href="#">Close Pop Up Button</a>
+        <div class="dialog-content">
+            <h1 class="dialog-title">‘Professional CV’ - Website Template</h1>
+            <div class="leftColumn">
+                <h3>Good For:</h3>
 
-<p class="font_8" style="line-height:1.3em;"><span class="color_19"><span style="letter-spacing:0.05em;">123-456-7890</span></span></p>
+                <div id="dialog-good-for">Professionals, Business Professionals, Students, Recent Graduates</div>
+                <h3>Description:</h3>
 
-<p class="font_8" style="line-height:1.3em;">&nbsp;</p>
+                <div id="dialog-description" itemprop="description">Stand out for all the right reasons with this newly designed professional CV template. This clean and sharp template was created with you in mind, as it offers a bold way to show off your skills. With eye-catching transitions, a section fully devoted for your education and career history, and the perfect place for you to add a unique photo of yourself, your CV will be looking the best it has ever been. It's easy to get started, simply click 'Edit" below.</div>
+            </div>
+            <div class="rightColumn">
+                                                                <span>
+					<h3>Difficulty:&nbsp;</h3>
+					<div id="dialog-difficulty" itemprop="difficulty">Medium</div>
+				</span>
+				<span itemprop="offers" itemscope="" itemtype="http://schema.org/Offer">
+					<h3>Price:&nbsp;</h3>
+					<div id="dialog-price" itemprop="price">Free</div>
+					<link itemprop="availability" href="http://schema.org/InStock">
+				</span>
+                <a href="#" id="dialog-edit-now">Edit now</a>
+            </div>
+            <div class="clearBoth">&nbsp;</div>
+        </div>
+        <div class="dialog-box-shadows">
+            <div class="leftShadow"></div>
+            <div class="rightShadow"></div>
+        </div>
+    </div>
+    <!-- End of #dialog-box-->
 
-<h6 class="font_6" style="line-height:1.3em;"><span class="color_19"><span style="letter-spacing:0.05em;">Email:</span></span></h6>
-
-<p class="font_8" style="line-height:1.3em;"><span class="color_19"><span style="letter-spacing:0.05em;"><object height="0"><a class="auto-generated-link" data-auto-recognition="true" data-content="info@mysite.com" href="mailto:info@mysite.com" data-type="mail">info@mysite.com</a></object>&nbsp;</span></span></p>
-
-<p class="font_8" style="line-height:1.3em;">&nbsp;</p>
-
-<h6 class="font_6" style="line-height:1.3em;"><span class="color_19"><span style="letter-spacing:0.05em;">Address:</span></span></h6>
-
-<p class="font_8" style="line-height:1.3em;"><span class="color_19"><span style="letter-spacing:0.05em;">500 Terry Francois Street</span></span></p>
-
-<p class="font_8" style="line-height:1.3em;"><span class="color_19"><span style="letter-spacing:0.05em;">San Francisco, CA 94158</span></span></p>
-
-<p class="font_8" style="line-height:1.3em;"><span class="color_19"><span style="letter-spacing:0.05em;"><span class="wixGuard">​</span></span></span></p>
-
-<h6 class="font_6" style="line-height:1.3em;"><span class="color_19"><span style="letter-spacing:0.05em;">Date of Birth:</span></span></h6>
-
-<p class="font_8" style="line-height:1.3em;"><span class="color_19"><span style="letter-spacing:0.05em;">March 14th, 1984</span></span></p>
-
-<h6 class="font_6" style="line-height:1.3em;"><span class="wixGuard">​</span></h6>
-</div></div></div></div></div></div></section>
+</div>
