--- a/wuyang.html
+++ b/wuyang.html
@@ -1,90 +1,55 @@
-<div id="container" class="template_viewer" style="height: 100%;">
-    <div id="header">
-        <div class="navigation">
-            <div id="wixLogo">
-                <a href="http://www.wix.com/">Wix Press</a>
-            </div>
-                            <div id="template-mode-toggle">
-                    <div class="view-mode-toggle-button view-mode-toggle-button-desktop selected" data="desktop" title="Desktop view"></div>
-                    <div class="view-mode-toggle-button view-mode-toggle-button-mobile" data="mobile" title="Mobile view"></div>
-                </div>
-                        <div class="templateDetails" itemscope="" itemtype="http://schema.org/Product/WebsiteTemplate">
-                <meta itemprop="name" content="Professional CV">
-            </div>
-            <!-- End of .templateDetails-->
-            <div class="templatesButtons">
-                <span id="templatesName">Click Edit and create your own amazing website</span> <a id="readMore" href="#">Read more</a>
-                <meta itemprop="image" content="//static.wixstatic.com/media/643a2480bf1449d4a829cd2bb90dcd5f.jpg">
-                <a href="#" class="button" id="editButton">Edit this site<span>&nbsp;</span></a>
-                <span id="categoriesHolder">
+<head>
+    <meta charset="utf-8">
+    
+    <title>Professional CV Website Template | WIX</title>
+    <meta name="description" content="Stand out for all the right reasons with this newly designed professional CV template. This clean and sharp template was created with you in mind, as it offers a bold way to show off your skills. With eye-catching transitions, a section fully devoted for your education and career history, and the perfect place for you to add a unique photo of yourself, your CV will be looking the best it has ever been. It's easy to get started, simply click 'Edit" below."="">
+    <meta name="author" content="Wixpress">
+    <meta http-equiv="content-language" content="en">
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
-                </span>
-                <span class="priceTypeWrapper"> Price: <span id="priceType">Free</span></span>
-                <span class="html5icon"></span>
+    <meta property="og:title" content="Professional CV Website Template | WIX">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://www.wix.com/website-template/view/html/1893">
+    <meta property="og:image" content="//static.wixstatic.com/media/643a2480bf1449d4a829cd2bb90dcd5f.jpg">
+    <meta content="Wix" property="og:site_name">
+    <meta property="og:description" content="Stand out for all the right reasons with this newly designed professional CV template. This clean and sharp template was created with you in mind, as it offers a bold way to show off your skills. With eye-catching transitions, a section fully devoted for your education and career history, and the perfect place for you to add a unique photo of yourself, your CV will be looking the best it has ever been. It's easy to get started, simply click 'Edit" below."="">
+    <meta property="fb:admins" content="731184828">
+    <meta name="fb:app_id" content="236335823061286">
+    <meta name="google-site-verification" content="QXhlrY-V2PWOmnGUb8no0L-fKzG48uJ5ozW0ukU7Rpo">
 
-                <div class="socialButtons">
-                    <div class="socialButtonsContent">
-                        <div class="facebookWrapper">
-                            <div class="fb-like fb_iframe_widget" data-send="false" data-layout="button_count" data-show-faces="true" fb-xfbml-state="rendered" fb-iframe-plugin-query="app_id=&amp;container_width=0&amp;href=http%3A%2F%2Fwww.wix.com%2Fwebsite-template%2Fview%2Fhtml%2F1893%3ForiginUrl%3Dhttp%253A%252F%252Fwww.wix.com%252Fwebsite%252Ftemplates%252Fhtml%252Fportfolio-cv%252F1%26bookName%3D%26galleryDocIndex%3D7%26category%3Dportfolio-cv&amp;layout=button_count&amp;locale=en_US&amp;sdk=joey&amp;send=false&amp;show_faces=true"><span style="vertical-align: bottom; width: 61px; height: 20px;"><iframe name="f18685fb2e1f19c" width="1000px" height="1000px" frameborder="0" allowtransparency="true" allowfullscreen="true" scrolling="no" title="fb:like Facebook Social Plugin" src="https://www.facebook.com/plugins/like.php?app_id=&amp;channel=http%3A%2F%2Fstaticxx.facebook.com%2Fconnect%2Fxd_arbiter%2Fr%2FXBwzv5Yrm_1.js%3Fversion%3D42%23cb%3Df10eba04b83a604%26domain%3Dwww.wix.com%26origin%3Dhttp%253A%252F%252Fwww.wix.com%252Ff2f29fe5ba4e104%26relation%3Dparent.parent&amp;container_width=0&amp;href=http%3A%2F%2Fwww.wix.com%2Fwebsite-template%2Fview%2Fhtml%2F1893%3ForiginUrl%3Dhttp%253A%252F%252Fwww.wix.com%252Fwebsite%252Ftemplates%252Fhtml%252Fportfolio-cv%252F1%26bookName%3D%26galleryDocIndex%3D7%26category%3Dportfolio-cv&amp;layout=button_count&amp;locale=en_US&amp;sdk=joey&amp;send=false&amp;show_faces=true" style="border: none; visibility: visible; width: 61px; height: 20px;" class=""></iframe></span></div>
-                        </div>
-                        <div class="googlePlusWrapper">
-                            <div id="___plusone_0" style="text-indent: 0px; margin: 0px; padding: 0px; background: transparent; border-style: none; float: none; line-height: normal; font-size: 1px; vertical-align: baseline; display: inline-block; width: 32px; height: 20px;"><iframe ng-non-bindable="" frameborder="0" hspace="0" marginheight="0" marginwidth="0" scrolling="no" style="position: static; top: 0px; width: 32px; margin: 0px; border-style: none; left: 0px; visibility: visible; height: 20px;" tabindex="0" vspace="0" width="100%" id="I0_1501484816355" name="I0_1501484816355" src="https://apis.google.com/u/0/se/0/_/+1/fastbutton?usegapi=1&amp;size=medium&amp;origin=http%3A%2F%2Fwww.wix.com&amp;url=http%3A%2F%2Fwww.wix.com%2Fwebsite-template%2Fview%2Fhtml%2F1893&amp;gsrc=3p&amp;ic=1&amp;jsh=m%3B%2F_%2Fscs%2Fapps-static%2F_%2Fjs%2Fk%3Doz.gapi.zh_CN.XtCFt0ZUYsg.O%2Fm%3D__features__%2Fam%3DAQ%2Frt%3Dj%2Fd%3D1%2Frs%3DAGLTcCMUMM65puO-r4t-Uf1aLc7xE0sUkg#_methods=onPlusOne%2C_ready%2C_close%2C_open%2C_resizeMe%2C_renderstart%2Concircled%2Cdrefresh%2Cerefresh&amp;id=I0_1501484816355&amp;parent=http%3A%2F%2Fwww.wix.com&amp;pfname=&amp;rpctoken=33781281" data-gapiattached="true" title="G+"></iframe></div>
-                        </div>
-                    </div>
-                    <!-- end of .socialButtonsContent -->
-                </div>
-                <!-- end of .socialButtons -->
-            </div>
-        </div>
-        <!-- End of .navigation-->
-    </div>
-    <!-- End of #Header-->
-    <div id="headerShadows">
-        <div class="rightShadow"></div>
-        <div class="leftShadow"></div>
-    </div>
-    <!-- End of #HeaderShadows-->
-    <div class="contentWrapper" style="height: calc(100% - 46px);">
-                                    <div class="preview-tab preview-tab-desktop" style="height: 479px;">
-                <iframe src="http://www.wix.com/demone2/professional-cv" width="100%" height="100%"></iframe>
-            </div>
-        
-        <!--</div>--><!-- End of .content-->
-    </div>
-    <!-- End of .contentWrapper-->
+        <link rel="canonical" href="http://www.wix.com/website-template/view/html/1893">
 
-    <div id="dialog-overlay"></div>
-    <div id="dialog-box">
-        <a id="close-pop-up-button" href="#">Close Pop Up Button</a>
-        <div class="dialog-content">
-            <h1 class="dialog-title">‘Professional CV’ - Website Template</h1>
-            <div class="leftColumn">
-                <h3>Good For:</h3>
+            <link rel="alternate" hreflang="fr" href="http://fr.wix.com/website-template/view/html/1893">
+            <link rel="alternate" hreflang="pt" href="http://pt.wix.com/website-template/view/html/1893">
+            <link rel="alternate" hreflang="cs" href="http://cs.wix.com/website-template/view/html/1893">
+            <link rel="alternate" hreflang="it" href="http://it.wix.com/website-template/view/html/1893">
+            <link rel="alternate" hreflang="nl" href="http://nl.wix.com/website-template/view/html/1893">
+            <link rel="alternate" hreflang="ko" href="http://ko.wix.com/website-template/view/html/1893">
+            <link rel="alternate" hreflang="de" href="http://de.wix.com/website-template/view/html/1893">
+            <link rel="alternate" hreflang="ru" href="http://ru.wix.com/website-template/view/html/1893">
+            <link rel="alternate" hreflang="sv" href="http://sv.wix.com/website-template/view/html/1893">
+            <link rel="alternate" hreflang="tr" href="http://tr.wix.com/website-template/view/html/1893">
+            <link rel="alternate" hreflang="da" href="http://da.wix.com/website-template/view/html/1893">
+            <link rel="alternate" hreflang="en" href="http://www.wix.com/website-template/view/html/1893">
+            <link rel="alternate" hreflang="es" href="http://es.wix.com/website-template/view/html/1893">
+            <link rel="alternate" hreflang="hi" href="http://hi.wix.com/website-template/view/html/1893">
+            <link rel="alternate" hreflang="ja" href="http://ja.wix.com/website-template/view/html/1893">
+            <link rel="alternate" hreflang="no" href="http://no.wix.com/website-template/view/html/1893">
+            <link rel="alternate" hreflang="pl" href="http://pl.wix.com/website-template/view/html/1893">
+        <link rel="alternate" hreflang="x-default" href="http://www.wix.com/website-template/view/html/1893">
 
-                <div id="dialog-good-for">Professionals, Business Professionals, Students, Recent Graduates</div>
-                <h3>Description:</h3>
 
-                <div id="dialog-description" itemprop="description">Stand out for all the right reasons with this newly designed professional CV template. This clean and sharp template was created with you in mind, as it offers a bold way to show off your skills. With eye-catching transitions, a section fully devoted for your education and career history, and the perfect place for you to add a unique photo of yourself, your CV will be looking the best it has ever been. It's easy to get started, simply click 'Edit" below.</div>
-            </div>
-            <div class="rightColumn">
-                                                                <span>
-					<h3>Difficulty:&nbsp;</h3>
-					<div id="dialog-difficulty" itemprop="difficulty">Medium</div>
-				</span>
-				<span itemprop="offers" itemscope="" itemtype="http://schema.org/Offer">
-					<h3>Price:&nbsp;</h3>
-					<div id="dialog-price" itemprop="price">Free</div>
-					<link itemprop="availability" href="http://schema.org/InStock">
-				</span>
-                <a href="#" id="dialog-edit-now">Edit now</a>
-            </div>
-            <div class="clearBoth">&nbsp;</div>
-        </div>
-        <div class="dialog-box-shadows">
-            <div class="leftShadow"></div>
-            <div class="rightShadow"></div>
-        </div>
-    </div>
-    <!-- End of #dialog-box-->
+    <!--CSS-->
+    <link rel="stylesheet" type="text/css" href="//static.parastorage.com/services/wix-html-template-viewer/1.984.0/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="//static.parastorage.com/services/wix-html-template-viewer/1.984.0/new-create/css/fonts.css">
+    <link rel="stylesheet" type="text/css" href="//static.parastorage.com/services/wix-public/1.231.0/css/Helvetica/fontFace.css">
+    <link rel="stylesheet" type="text/css" href="//static.parastorage.com/services/wix-html-template-viewer/1.984.0/css/template_viewer.css">
 
-</div>
+
+    <!--[if lte IE 9]>
+    <link rel="stylesheet" type="text/css" href="//static.parastorage.com/services/wix-html-template-viewer/1.984.0/css/ie9-and-down.css"/>
+    <![endif]-->
+
+    <link class="__ADORIC__" rel="stylesheet" type="text/css" href="https://adoric.com/lightboxreset.css?v=3.5.2" media="all"><link class="__ADORIC__" rel="stylesheet" type="text/css" href="https://adoric.com/public/css/animate.min.css" media="all"><link rel="stylesheet" type="text/css" href="//fast.fonts.net/cssapi/c7da2921-a5c2-426d-9611-16e0a1bdfd02.css" media="all"><style type="text/css">.fb_hidden{position:absolute;top:-10000px;z-index:10001}.fb_reposition{overflow:hidden;position:relative}.fb_invisible{display:none}.fb_reset{background:none;border:0;border-spacing:0;color:#000;cursor:auto;direction:ltr;font-family:"lucida grande", tahoma, verdana, arial, sans-serif;font-size:11px;font-style:normal;font-variant:normal;font-weight:normal;letter-spacing:normal;line-height:1;margin:0;overflow:visible;padding:0;text-align:left;text-decoration:none;text-indent:0;text-shadow:none;text-transform:none;visibility:visible;white-space:normal;word-spacing:normal}.fb_reset>div{overflow:hidden}.fb_link img{border:none}@keyframes fb_transform{from{opacity:0;transform:scale(.95)}to{opacity:1;transform:scale(1)}}.fb_animate{animation:fb_transform .3s forwards}
+.fb_dialog{background:rgba(82, 82, 82, .7);position:absolute;top:-10000px;z-index:10001}.fb_reset .fb_dialog_legacy{overflow:visible}.fb_dialog_advanced{padding:10px;-moz-border-radius:8px;-webkit-border-radius:8px;border-radius:8px}.fb_dialog_content{background:#fff;color:#333}.fb_dialog_close_icon{background:url(https://static.xx.fbcdn.net/rsrc.php/v3/yq/r/IE9JII6Z1Ys.png) no-repeat scroll 0 0 transparent;cursor:pointer;display:block;height:15px;position:absolute;right:18px;top:17px;width:15px}.fb_dialog_mobile .fb_dialog_close_icon{top:5px;left:5px;right:auto}.fb_dialog_padding{background-color:transparent;position:absolute;width:1px;z-index:-1}.fb_dialog_close_icon:hover{background:url(https://static.xx.fbcdn.net/rsrc.php/v3/yq/r/IE9JII6Z1Ys.png) no-repeat scroll 0 -15px transparent}.fb_dialog_close_icon:active{background:url(https://static.xx.fbcdn.net/rsrc.php/v3/yq/r/IE9JII6Z1Ys.png) no-repeat scroll 0 -30px transparent}.fb_dialog_loader{background-color:#f6f7f9;border:1px solid #606060;font-size:24px;padding:20px}.fb_dialog_top_left,.fb_dialog_top_right,.fb_dialog_bottom_left,.fb_dialog_bottom_right{height:10px;width:10px;overflow:hidden;position:absolute}.fb_dialog_top_left{background:url(https://static.xx.fbcdn.net/rsrc.php/v3/ye/r/8YeTNIlTZjm.png) no-repeat 0 0;left:-10px;top:-10px}.fb_dialog_top_right{background:url(https://static.xx.fbcdn.net/rsrc.php/v3/ye/r/8YeTNIlTZjm.png) no-repeat 0 -10px;right:-10px;top:-10px}.fb_dialog_bottom_left{background:url(https://static.xx.fbcdn.net/rsrc.php/v3/ye/r/8YeTNIlTZjm.png) no-repeat 0 -20px;bottom:-10px;left:-10px}.fb_dialog_bottom_right{background:url(https://static.xx.fbcdn.net/rsrc.php/v3/ye/r/8YeTNIlTZjm.png) no-repeat 0 -30px;right:-10px;bottom:-10px}.fb_dialog_vert_left,.fb_dialog_vert_right,.fb_dialog_horiz_top,.fb_dialog_horiz_bottom{position:absolute;background:#525252;filter:alpha(opacity=70);opacity:.7}.fb_dialog_vert_left,.fb_dialog_vert_right{width:10px;height:100%}.fb_dialog_vert_left{margin-left:-10px}.fb_dialog_vert_right{right:0;margin-right:-10px}.fb_dialog_horiz_top,.fb_dialog_horiz_bottom{width:100%;height:10px}.fb_dialog_horiz_top{margin-top:-10px}.fb_dialog_horiz_bottom{bottom:0;margin-bottom:-10px}.fb_dialog_iframe{line-height:0}.fb_dialog_content .dialog_title{background:#6d84b4;border:1px solid #365899;color:#fff;font-size:14px;font-weight:bold;margin:0}.fb_dialog_content .dialog_title>span{background:url(https://static.xx.fbcdn.net/rsrc.php/v3/yd/r/Cou7n-nqK52.gif) no-repeat 5px 50%;float:left;padding:5px 0 7px 26px}body.fb_hidden{-webkit-transform:none;height:100%;margin:0;overflow:visible;position:absolute;top:-10000px;left:0;width:100%}.fb_dialog.fb_dialog_mobile.loading{background:url(https://static.xx.fbcdn.net/rsrc.php/v3/ya/r/3rhSv5V8j3o.gif) white no-repeat 50% 50%;min-height:100%;min-width:100%;overflow:hidden;position:absolute;top:0;z-index:10001}.fb_dialog.fb_dialog_mobile.loading.centered{width:auto;height:auto;min-height:initial;min-width:initial;background:none}.fb_dialog.fb_dialog_mobile.loading.centered #fb_dialog_loader_spinner{width:100%}.fb_dialog.fb_dialog_mobile.loading.centered .fb_dialog_content{background:none}.loading.centered #fb_dialog_loader_close{color:#fff;display:block;padding-top:20px;clear:both;font-size:18px}#fb-root #fb_dialog_ipad_overlay{background:rgba(0, 0, 0, .45);position:absolute;bottom:0;left:0;right:0;top:0;width:100%;min-height:100%;z-index:10000}#fb-root #fb_dialog_ipad_overlay.hidden{display:none}.fb_dialog.fb_dialog_mobile.loading iframe{visibility:hidden}.fb_dialog_content .dialog_header{-webkit-box-shadow:white 0 1px 1px -1px inset;background:-webkit-gradient(linear, 0% 0%, 0% 100%, from(#738ABA), to(#2C4987));border-bottom:1px solid;border-color:#1d4088;color:#fff;font:14px Helvetica, sans-serif;font-weight:bold;text-overflow:ellipsis;text-shadow:rgba(0, 30, 84, .296875) 0 -1px 0;vertical-align:middle;white-space:nowrap}.fb_dialog_content .dialog_header table{-webkit-font-smoothing:subpixel-antialiased;height:43px;width:100%}.fb_dialog_content .dialog_header td.header_left{font-size:12px;padding-left:5px;vertical-align:middle;width:60px}.fb_dialog_content .dialog_header td.header_right{font-size:12px;padding-right:5px;vertical-align:middle;width:60px}.fb_dialog_content .touchable_button{background:-webkit-gradient(linear, 0% 0%, 0% 100%, from(#4966A6), color-stop(.5, #355492), to(#2A4887));border:1px solid #29487d;-webkit-background-clip:padding-box;-webkit-border-radius:3px;-webkit-box-shadow:rgba(0, 0, 0, .117188) 0 1px 1px inset, rgba(255, 255, 255, .167969) 0 1px 0;display:inline-block;margin-top:3px;max-width:85px;line-height:18px;padding:4px 12px;position:relative}.fb_dialog_content .dialog_header .touchable_button input{border:none;background:none;color:#fff;font:12px Helvetica, sans-serif;font-weight:bold;margin:2px -12px;padding:2px 6px 3px 6px;text-shadow:rgba(0, 30, 84, .296875) 0 -1px 0}.fb_dialog_content .dialog_header .header_center{color:#fff;font-size:16px;font-weight:bold;line-height:18px;text-align:center;vertical-align:middle}.fb_dialog_content .dialog_content{background:url(https://static.xx.fbcdn.net/rsrc.php/v3/y9/r/jKEcVPZFk-2.gif) no-repeat 50% 50%;border:1px solid #555;border-bottom:0;border-top:0;height:150px}.fb_dialog_content .dialog_footer{background:#f6f7f9;border:1px solid #555;border-top-color:#ccc;height:40px}#fb_dialog_loader_close{float:left}.fb_dialog.fb_dialog_mobile .fb_dialog_close_button{text-shadow:rgba(0, 30, 84, .296875) 0 -1px 0}.fb_dialog.fb_dialog_mobile .fb_dialog_close_icon{visibility:hidden}#fb_dialog_loader_spinner{animation:rotateSpinner 1.2s linear infinite;background-color:transparent;background-image:url(https://static.xx.fbcdn.net/rsrc.php/v3/yD/r/t-wz8gw1xG1.png);background-repeat:no-repeat;background-position:50% 50%;height:24px;width:24px}@keyframes rotateSpinner{0%{transform:rotate(0deg)}100%{transform:rotate(360deg)}}
+.fb_iframe_widget{display:inline-block;position:relative}.fb_iframe_widget span{display:inline-block;position:relative;text-align:justify}.fb_iframe_widget iframe{position:absolute}.fb_iframe_widget_fluid_desktop,.fb_iframe_widget_fluid_desktop span,.fb_iframe_widget_fluid_desktop iframe{max-width:100%}.fb_iframe_widget_fluid_desktop iframe{min-width:220px;position:relative}.fb_iframe_widget_lift{z-index:1}.fb_hide_iframes iframe{position:relative;left:-10000px}.fb_iframe_widget_loader{position:relative;display:inline-block}.fb_iframe_widget_fluid{display:inline}.fb_iframe_widget_fluid span{width:100%}.fb_iframe_widget_loader iframe{min-height:32px;z-index:2;zoom:1}.fb_iframe_widget_loader .FB_Loader{background:url(https://static.xx.fbcdn.net/rsrc.php/v3/y9/r/jKEcVPZFk-2.gif) no-repeat;height:32px;width:32px;margin-left:-16px;position:absolute;left:50%;z-index:4}</style></head>
