--- a/wuyang.html
+++ b/wuyang.html
@@ -6,60 +6,37 @@
     <body>
         <div style="left: 83px; width: 304px; position: absolute; top: 83px;" class="txtNew" id="comp-isylxd3r" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.$centeredContent.$inlineContent.$SITE_PAGES.$c1dmp_DESKTOP.$inlineContent.$comp-irls0xdi.$inlineContent.$mediairm34ucq7/=1$mediairm34ucq7.$inlineContent.$comp-isylwyqk.$inlineContent.$comp-isylxd3r">
             <h4 class="font_4">
-                <span class="color_19">Wu Yang
-                </span>
+                <span class="color_19">Wu Yang</span>
             </h4>
 
             <h6 class="font_6" style="line-height:1.8em;">
-                <span class="color_19">
-                    <span style="letter-spacing:0.05em;">Peking University
-                    </span>
-                </span>
+                <span class="color_19"><span style="letter-spacing:0.05em;">Peking University</span></span>
             </h6>
 
             <p class="font_8">&nbsp;</p>
 
             <h6 class="font_6" style="line-height:1.3em;">
-                <span class="color_19">
-                    <span style="letter-spacing:0.05em;">Phone:
-                    </span>
-                </span>
+                <span class="color_19"><span style="letter-spacing:0.05em;">Phone:</span></span>
             </h6>
 
             <p class="font_8" style="line-height:1.3em;">
-                <span class="color_19">
-                    <span style="letter-spacing:0.05em;">(+86)13728603359
-                    </span>
-                </span>
+                <span class="color_19"><span style="letter-spacing:0.05em;">(+86)13728603359</span></span>
             </p>
 
             <p class="font_8" style="line-height:1.3em;">&nbsp;</p>
 
             <h6 class="font_6" style="line-height:1.3em;">
-                <span class="color_19">
-                    <span style="letter-spacing:0.05em;">Email:
-                    </span>
-                </span>
+                <span class="color_19"><span style="letter-spacing:0.05em;">Email:</span></span>
             </h6>
 
             <p class="font_8" style="line-height:1.3em;">
-                <span class="color_19">
-                    <span style="letter-spacing:0.05em;">
-                        <object height="0">
-                            <a class="auto-generated-link" data-auto-recognition="true" data-content="yangwu@pku.edu.cn" href="yangwu@pku.edu.cn" data-type="yangwu@pku.edu.cn
-                            </a>
-                        </object>&nbsp;
-                    </span>
-                </span>
+                <span class="color_19"><span style="letter-spacing:0.05em;">(+86)13728603359</span></span>
             </p>
 
             <p class="font_8" style="line-height:1.3em;">&nbsp;</p>
 
             <h6 class="font_6" style="line-height:1.3em;">
-                <span class="color_19">
-                    <span style="letter-spacing:0.05em;">Address:
-                    </span>
-                </span>
+                <span class="color_19"><span style="letter-spacing:0.05em;">Address:</span></span>
             </h6>
 
             <p class="font_8" style="line-height:1.3em;">
@@ -70,39 +47,19 @@
             </p>
 
             <p class="font_8" style="line-height:1.3em;">
-                <span class="color_19">
-                    <span style="letter-spacing:0.05em;">University Town, Xili, Nanshan District, Shenzhen P.R.C.
-                    </span>
-                </span>
+                <span class="color_19"><span style="letter-spacing:0.05em;">University Town, Xili, Nanshan District, Shenzhen P.R.C.</span></span>
             </p>
 
-            <p class="font_8" style="line-height:1.3em;">
-                <span class="color_19">
-                    <span style="letter-spacing:0.05em;">
-                        <span class="wixGuard">​
-                        </span>
-                    </span>
-                </span>
-            </p>
+            <p class="font_8" style="line-height:1.3em;">&nbsp;</p>
 
             <h6 class="font_6" style="line-height:1.3em;">
-                <span class="color_19">
-                    <span style="letter-spacing:0.05em;">Date of Birth:
-                    </span>
-                </span>
+                <span class="color_19"><span style="letter-spacing:0.05em;">Date of Birth:</span></span>
             </h6>
 
             <p class="font_8" style="line-height:1.3em;">
-                <span class="color_19">
-                    <span style="letter-spacing:0.05em;">March 30th, 1991
-                    </span>
-                </span>
+                <span class="color_19"><span style="letter-spacing:0.05em;">March 30th, 1991</span></span>
             </p>
 
-            <h6 class="font_6" style="line-height:1.3em;">
-                <span class="wixGuard">​
-                </span>
-            </h6>
         </div>
     </body>
 </html>
