--- a/wuyang.html
+++ b/wuyang.html
@@ -13,8 +13,6 @@
                 <span class="color_19"><span style="letter-spacing:0.05em;">Peking University</span></span>
             </h6>
 
-            <p class="font_8">&nbsp;</p>
-
             <h6 class="font_6" style="line-height:1.3em;">
                 <span class="color_19"><span style="letter-spacing:0.05em;">Phone:</span></span>
             </h6>
@@ -23,17 +21,13 @@
                 <span class="color_19"><span style="letter-spacing:0.05em;">(+86)13728603359</span></span>
             </p>
 
-            <p class="font_8" style="line-height:1.3em;">&nbsp;</p>
-
             <h6 class="font_6" style="line-height:1.3em;">
                 <span class="color_19"><span style="letter-spacing:0.05em;">Email:</span></span>
             </h6>
 
             <p class="font_8" style="line-height:1.3em;">
-                <span class="color_19"><span style="letter-spacing:0.05em;">(+86)13728603359</span></span>
+                <span class="color_19"><span style="letter-spacing:0.05em;">yangwu@pku.edu.cn</span></span>
             </p>
-
-            <p class="font_8" style="line-height:1.3em;">&nbsp;</p>
 
             <h6 class="font_6" style="line-height:1.3em;">
                 <span class="color_19"><span style="letter-spacing:0.05em;">Address:</span></span>
@@ -49,8 +43,6 @@
             <p class="font_8" style="line-height:1.3em;">
                 <span class="color_19"><span style="letter-spacing:0.05em;">University Town, Xili, Nanshan District, Shenzhen P.R.C.</span></span>
             </p>
-
-            <p class="font_8" style="line-height:1.3em;">&nbsp;</p>
 
             <h6 class="font_6" style="line-height:1.3em;">
                 <span class="color_19"><span style="letter-spacing:0.05em;">Date of Birth:</span></span>
