--- a/wuyang.html
+++ b/wuyang.html
@@ -4,14 +4,18 @@
         <title>Wu Yang</title>
     </head>
     <body>
+        <img id="comp-isuax1udimgimage" style="filter: url(&quot;#kennedy-comp-isuax1udimg&quot;); outline: transparent solid 1px; width: 470px; height: 470px; object-fit: cover;" alt="" data-type="image" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.$centeredContent.$inlineContent.$SITE_PAGES.$c1dmp_DESKTOP.$inlineContent.$comp-irls0xdi.$inlineContent.$mediairm34ucq7/=1$mediairm34ucq7.$inlineContent.$comp-isuax1ud.$link.0.$imagekennedy-comp-isuax1udimg" src="<img id="comp-isuax1udimgimage" style="filter: url(&quot;#kennedy-comp-isuax1udimg&quot;); outline: transparent solid 1px; width: 470px; height: 470px; object-fit: cover;" alt="" data-type="image" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.$centeredContent.$inlineContent.$SITE_PAGES.$c1dmp_DESKTOP.$inlineContent.$comp-irls0xdi.$inlineContent.$mediairm34ucq7/=1$mediairm34ucq7.$inlineContent.$comp-isuax1ud.$link.0.$imagekennedy-comp-isuax1udimg" src="https://static.wixstatic.com/media/23e8ad88ae744df0bd7f5221f3d67b0e.jpg/v1/crop/x_90,y_275,w_2349,h_2350/fill/w_470,h_470,al_c,q_80,usm_0.66_1.00_0.01/23e8ad88ae744df0bd7f5221f3d67b0e.webp">">
         <div style="left: 83px; width: 304px; position: absolute; top: 83px;" class="txtNew" id="comp-isylxd3r" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.$centeredContent.$inlineContent.$SITE_PAGES.$c1dmp_DESKTOP.$inlineContent.$comp-irls0xdi.$inlineContent.$mediairm34ucq7/=1$mediairm34ucq7.$inlineContent.$comp-isylwyqk.$inlineContent.$comp-isylxd3r">
             <h1 class="font_4">
                 <span class="color_19">Wu Yang</span>
             </h1>
 
-            <h1 class="font_6" style="line-height:1.8em;">
+            <h2 class="font_6" style="line-height:1.3em;">
+                <span class="color_19"><span style="letter-spacing:0.05em;">School:</span></span>
+            </h2>
+            <p class="font_8" style="line-height:1.3em;">
                 <span class="color_19"><span style="letter-spacing:0.05em;">Peking University</span></span>
-            </h1>
+            </p>
 
             <h2 class="font_6" style="line-height:1.3em;">
                 <span class="color_19"><span style="letter-spacing:0.05em;">Phone:</span></span>
