--- a/final_project0/map.html
+++ b/final_project0/map.html
@@ -96,7 +96,7 @@
         </div>
     </div>
     <script src="js/mapdata.js"></script>
-    <script src="js/index.js"></script>
+    <script src="js/charts.js"></script>
     <script>
         var chart = echarts.init(document.getElementById('main'));
         chart.setOption({
