--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -90,14 +90,16 @@
                 *数据来源于环保部数据中心
             </p>
         </div>
-        <div id="charts" _echarts_instance_="ec_1503047322790" style="-webkit-tap-highlight-color: transparent; user-select: none; position: relative; background-color: rgba(0, 0, 0, 0);">
-            <div style="position: relative; overflow: hidden; width: 1366px; height: 643px; cursor: default;"><canvas width="1366" height="643" data-zr-dom-id="zr_0" style="position: absolute; left: 0px; top: 0px; width: 1366px; height: 643px; user-select: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></canvas></div>
+        <div id="charts" _echarts_instance_="ec_1503047322790" style="-webkit-tap-highlight-color: transparent; user-select: none; position: absolute; background-color: rgba(0, 0, 0, 0);">
+            <div style="position: relative; overflow: hidden; width: 1366px; height: 643px; cursor: default;">
+                <canvas width="1366" height="643" data-zr-dom-id="zr_0" style="position: absolute; left: 0px; top: 0px; width: 1366px; height: 643px; user-select: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></canvas>
+            </div>
             <div></div>
         </div>
     </div>
     <script src="js/mapdata.js"></script>
     <script src="js/charts.js"></script>
-    <script>
+    <!-- <script>
         var chart = echarts.init(document.getElementById('main'));
         chart.setOption({
             series: [{
@@ -105,7 +107,7 @@
                 map: 'china'
             }]
         });
-    </script>
+    </script> -->
 </body>
 
 </html>
