--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -119,7 +119,9 @@
                 <div class="col-lg-8 mx-auto myclass">
                     <p>我国主要河流有机污染普遍，主要湖泊富营养化严重，流经城市河段普遍受到污染，近岸海域亦受到一定污染。珠江流域干流广州段污染相对较重。黄河流域面临水资源短缺和水体污染双重压力。松花江流域处于中等污染水平。淮河流域，干流水质尚好，支流Ⅳ类至劣Ⅴ类水质为主。海河流域污染严重。辽河流域污染严重。太湖流域处于富营养状态。滇池流域富营养化严重。</p>
                     <br>
-                    <img id="pic" src="images/valley.png" style="width:50%; right:10em">
+                    <img id="pic" src="images/valley.png" style="width:100%%; right:10em">
+                    <br>
+                    <br>
                     <p>水体富营养化(eutrophication)是指在人类活动的影响下，生物所需的氮、磷等营养物质大量进入湖泊、河湖、海湾等缓流水体，引起藻类及其他浮游生物迅速繁殖，水体溶解氧量下降，水质恶化，鱼类及其他生物大量死亡的现象。</p>
                     <br>
                     <p>太湖、鄱阳湖、梁子湖等湖泊都曾发生大规模富营养化事件，即为水华，大规模的蓝藻爆发，使得水质严重恶化，水源恶臭，水质发黑，溶解氧下降到0mg/L，氨氮指标上升到5mg/L，部分鱼类因缺氧而死亡。特别是无太湖饮用水水源地受到严重威胁，水厂停止供水。</p>
@@ -130,7 +132,7 @@
                     <br>
                 </div>
             </div>
-            <img id="pic" src="images/lake.png" style="width:50%; left:10em">
+            <img id="pic" src="images/lake.png" style="width:100%%; left:10em">
         </div>
     </section>
 
